--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 
-.container {
-    height: 100vh;  
-  }
+
 
 
 .row{
     border:1px solid;
-    height:100%;
+  
 }
+
+.row div{
+
+border:1px solid;
+
+}
+
+
+
