--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 
+body{
 
+    background-image: url("https://cdn.pixabay.com/photo/2017/12/28/14/00/piglet-3045288__340.jpg" );
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+
+
+}
+
+}
 
 
 .row{
