--- a/style.css
+++ b/style.css
@@ -6,23 +6,25 @@ body{
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
+    font-family:fantasy;
 
 
 }
 
-}
 
 
-.row{
+.container{
     border:1px solid;
-  
-}
+    
+     
 
+}
+.row{
+
+    border:1px solid;
+}
 .row div{
 
-border:1px solid;
-
+    border:1px solid;
 }
-
-
 
