--- a/materials.css
+++ b/materials.css
@@ -46,10 +46,16 @@
 	position:relative;
 	top:1px;
 }
+.text-shadow {
+	font-size: 50px;
+	font-family: "Arial Black", Gadget, sans-serifpx;
+	color: #ff00d5;
+	text-shadow: #A3A3A3 3px 3px 1px;
+}
 
- 
- 
-.generatecssdotcom_3d { position: absolute;top: 0;right: 0;font-size:8px;color: #cccccc;}
-.generatecssdotcom_3d a {color: #cccccc; text - decoration:none; font - weight:normal; }
-.generatecssdotcom_3d a:hover {color: #cccccc; text - decoration:none; font - weight:normal; }
-#generatecssdotcom_text {font-size: 51px;font-family: Georgia;color: #ff4040;text-shadow:0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15); text-align:center; line-height:250px;}
+.text-shadowblack {
+	font-size: 50px;
+	font-family: "Arial Black", Gadget, sans-serifpx;
+	color: #593b54;
+	text-shadow: #A3A3A3 0px 0px 5px;
+}
