--- a/materials.css
+++ b/materials.css
@@ -59,3 +59,19 @@
 	color: #593b54;
 	text-shadow: #A3A3A3 0px 0px 5px;
 }
+.shape-ex1{
+    width: 150px;
+    height: 40px;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    line-height: 40px;
+    color: #000;
+    background-color: transparent;
+    border: 1px solid #000;
+    transition: all .3s linear;
+}
+.shape-ex1:hover{
+    background-color: #000;
+    color: #fff;
+}
